2004-08-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add "(-p" "%p)" in login-args where
	applicable for the port kludge.  Arrange login-args as list of
	lists, in order to discard a sublist when the corresponding
	parameter is not set (like user name, port number).  Adapt
	docstring.
	(tramp-maybe-open-connection): Change evaluation of login-args
	according the the changes above.
	(tramp-make-tramp-file-name): Use "%l" as placeholder for the
	localname part.  "%p" is used for port numbers now, and we want to
	avoid headaches.

2004-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist)
	(tramp-default-proxies-alist): Correcting doc string.
	(tramp-default-user, tramp-default-user-alist)
	(tramp-default-host): New defcustom.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-handle-expand-file-name, tramp-action-login)
	(tramp-buffer-name, tramp-debug-buffer-name)
	(tramp-maybe-open-connection)
	(tramp-read-passwd, tramp-clear-passwd): Apply `tramp-find-user'
	and `tramp-find-host'.
	(tramp-find-default-method): Allow nil regexps.
	(tramp-find-default-user, tramp-find-user)
	(tramp-find-default-host, tramp-find-host): New defun.

	* tramp-smb.el (top): Add empty (anonymous) user to
	`tramp-default-user-alist' for smb method.
	
2004-07-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Foreign and out-of-band
	methods are not supported for multi-hops.

2004-07-30  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (top): Check for (X)Emacs version.  Code is from
	macro AC_EMACS_INFO of aclocal.m4.

	* tramp.el (top): Remove (X)Emacs version check.
	(tramp-maybe-open-connection): Handle nil values in
	`tramp-default-proxies-alist'.

2004-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Set
	`coding-system-for-read'.  It was lost last patch.

	* tramp-smb.el (all): Don't load "cl-seq", Emacs 19 is out of